Update Academic Background

--- a/index.html
+++ b/index.html
@@ -149,39 +149,42 @@
           Aprendizado contínuo
         </h4>
         <div class="row">
-          <div class="col-lg-4 col-md-6 mb-lg-0 mb-4">
-            <a href="https://univesp.br/cursos/engenharia-de-computacao" target="_blank" class="destaque">
-              <div class="img-container mb-3">
-                <img src="assets/univesp.svg" class="img-fluid" />
-              </div>
-              <h5 class="text-uppercase">Engenharia de Computação</h5>
-              <p class="mb-0">
-                UNIVESP - em andamento. 
-              </p>
-            </a>
-          </div>
-          <div class="col-lg-4 col-md-6 mb-lg-0 mb-4">
-            <a href="https://www.42sp.org.br/" target="_blank" class="destaque">
-              <div class="img-container mb-3">
-                <img src="assets/42.svg" class="img-fluid" />
-              </div>
-              <h5 class="text-uppercase">Engenheira de Software</h5>
-              <p class="mb-0">
-                42 SP | Escola de Tecnologia – em andamento – 2021.
-              </p>
-            </a>
-          </div>
-          <div class="col-lg-4 col-md-6 mb-lg-0 mb-4">
-            <a href="https://campinas.sp.senai.br/curso/66551/501/administrador-de-banco-de-dados" target="_blank" class="destaque">
-              <div class="img-container mb-3">
-                <img src="assets/senai.svg" class="img-fluid" />
-              </div>
-              <h5 class="text-uppercase">Administrador de Banco de Dados</h5>
-              <p class="mb-0">
-                SENAI – 2021.
-              </p>
-            </a>
-          </div>
+            <div class="col-lg-4 col-md-6 mb-lg-0 mb-4">
+                <a href="https://univesp.br/cursos/engenharia-de-computacao" target="_blank" class="destaque">
+                    <div class="img-container mb-3">
+                        <img src="assets/univesp.svg" class="img-fluid" />
+                    </div>
+                    <h5 class="text-uppercase">Engenharia de Computação</h5>
+                    <p class="mb-0">
+                        UNIVESP - em andamento.
+                    </p>
+                </a>
+            </div>
+            <div class="col-lg-4 col-md-6 mb-lg-0 mb-4">
+                <a href="https://univesp.br/cursos/bacharel-em-tecnologia-da-informacao" target="_blank" class="destaque">
+                    <div class="img-container mb-3">
+                        <img src="assets/univesp.svg" class="img-fluid" />
+                    </div>
+                    <h5 class="text-uppercase">
+                        Bacharelado em Tecnologia da Informação
+                    </h5>
+                    <p class="mb-0">
+                        UNIVESP - esperando colação de grau.
+                    </p>
+                </a>
+            </div>
+            
+            <div class="col-lg-4 col-md-6 mb-lg-0 mb-4">
+                <a href="https://campinas.sp.senai.br/curso/66551/501/administrador-de-banco-de-dados" target="_blank" class="destaque">
+                    <div class="img-container mb-3">
+                        <img src="assets/senai.svg" class="img-fluid" />
+                    </div>
+                    <h5 class="text-uppercase">Administrador de Banco de Dados</h5>
+                    <p class="mb-0">
+                        SENAI – 2021.
+                    </p>
+                </a>
+            </div>
         </div>
         <br>
         <div class="row">
@@ -212,9 +215,9 @@
               <div class="img-container mb-3">
                 <img src="assets/libras.svg" class="img-fluid" />
               </div>
-              <h5 class="text-uppercase">Libras Completo Avançado<br></h5>
+              <h5 class="text-uppercase">Libras Completo<br></h5>
               <p class="mb-0">
-                em andamento<br>Academia de Libras - 2020.
+                em andamento<br>Academia de Libras.
               </p>
             </a>
           </div>
