--- a/index.html
+++ b/index.html
@@ -634,8 +634,8 @@
                         <h5 class="card-title"><strong>Safety CoC App Developer</strong></h5>
                         <p class="card-text">Samsung Eletrônica da Amazônia LTDA, Jul/2023</p>
                         <ul class="text-start">
-                            <li>Recognized for outstanding commitment to quality improvement.</li>
-                            <li>Contributed to enhancing product and process quality at Samsung.</li>
+                            <li>Appointed to build and promote a safety culture within Samsung.</li>
+                            <li>Recognized for commitment and active engagement as a key person in safety initiatives.</li>
                         </ul>
                     </div>
                 </div>
